# preprints

./: .gitignore  DIS22 Abstract.docx  analysis.py  citations.csv  dis22showcase.ipynb  graphs_for_presentation.ipynb  lexical_challenge.py  main.py  openalex.py  pyproject.toml  readability_scores.csv  rules_with_scores.csv  structure_features.py  text_features.py
notebooks/: 01_exploratory_analysis.ipynb  analysis.ipynb  analysis_v2.ipynb
output/: final_dataset.csv  full_dataset.csv
