[project]
name = "preprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "polars>=1.40.1",
    "pymupdf>=1.27.2.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
